Fix navbar wrapping

--- a/static/src/less/navbar.less
+++ b/static/src/less/navbar.less
@@ -10,7 +10,7 @@
   & > li {
     height: @navbar-height;
     @media (min-width: @screen-md-min) {
-      margin-right: 23px;
+      margin-right: 15px;
     }
   }
   .dropdown-toggle, & > li > a {
